--- a/Podchody/Podchody/Web.config
+++ b/Podchody/Podchody/Web.config
@@ -7,6 +7,8 @@
   <connectionStrings>
     <add name="CityGameConnectionString" connectionString="Data Source=DESKTOP-SM2QJK8;Initial Catalog=CityGame;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="CityGameConnectionString1" connectionString="Data Source=gramiejskapodchody.database.windows.net;Initial Catalog=CityGame;User ID=Krimek;Password=08031994Krzysio;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings/>
   <!--
