--- a/Podchody/Podchody/Podchody.csproj
+++ b/Podchody/Podchody/Podchody.csproj
@@ -117,8 +117,8 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Code\Validation.cs" />
-    <Compile Include="App_Code\Security.cs" />
+    <Compile Include="Models\Validation.cs" />
+    <Compile Include="Models\Security.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\NextPlaceController.cs" />
     <Compile Include="Controllers\SpecialTaskController.cs" />
@@ -229,6 +229,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Code\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
