Dodano walidacje dla tworzenia nowych podchodów. Poprawki błedów

--- a/Podchody/Podchody/Podchody.csproj
+++ b/Podchody/Podchody/Podchody.csproj
@@ -117,8 +117,9 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Validation.cs" />
-    <Compile Include="Models\Security.cs" />
+    <Compile Include="App_Code\Point.cs" />
+    <Compile Include="App_Code\Validation.cs" />
+    <Compile Include="App_Code\Security.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\NextPlaceController.cs" />
     <Compile Include="Controllers\SpecialTaskController.cs" />
@@ -229,11 +230,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Code\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
