--- a/Podchody/Podchody/Podchody.csproj
+++ b/Podchody/Podchody/Podchody.csproj
@@ -115,6 +115,7 @@
     <Content Include="Page\NewGame.aspx" />
     <Content Include="Page\Registration.aspx" />
     <Content Include="Page\Scores.aspx" />
+    <Content Include="Page\Team.aspx" />
     <Content Include="Style\Style.css" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -193,6 +194,13 @@
     </Compile>
     <Compile Include="Page\Stalking.Master.designer.cs">
       <DependentUpon>Stalking.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Page\Team.aspx.cs">
+      <DependentUpon>Team.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page\Team.aspx.designer.cs">
+      <DependentUpon>Team.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
