--- a/Podchody/Podchody/Podchody.csproj
+++ b/Podchody/Podchody/Podchody.csproj
@@ -113,7 +113,6 @@
     <Content Include="Page\Login.aspx" />
     <Content Include="Page\Managment.aspx" />
     <Content Include="Page\NewGame.aspx" />
-    <Content Include="Page\Registration.aspx" />
     <Content Include="Page\Scores.aspx" />
     <Content Include="Page\Team.aspx" />
     <Content Include="Style\Style.css" />
@@ -121,6 +120,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Code\Point.cs" />
+    <Compile Include="App_Code\Properties.cs" />
     <Compile Include="App_Code\Validation.cs" />
     <Compile Include="App_Code\Security.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
@@ -173,13 +173,6 @@
     </Compile>
     <Compile Include="Page\NewGame.aspx.designer.cs">
       <DependentUpon>NewGame.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Page\Registration.aspx.cs">
-      <DependentUpon>Registration.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Page\Registration.aspx.designer.cs">
-      <DependentUpon>Registration.aspx</DependentUpon>
     </Compile>
     <Compile Include="Page\Scores.aspx.cs">
       <DependentUpon>Scores.aspx</DependentUpon>
